# glowy3d

./: CMakeLists.txt  Glowy2D.sln  README.md
Classes/: Actor.cpp  Actor.h  Director.cpp  Director.h  Main.cpp  World.cpp  World.h
Classes/Classes/: AAnimation.cpp  AAnimation.h  AI.cpp  AI.h  Ability.cpp  Ability.h  Actor.cpp  Actor.h  AppDelegate.cpp  Creature.cpp  Creature.h  CreatureStats.cpp  CreatureStats.h  Effect.cpp  Effect.h  FileOperation.cpp  FileOperation.h  FileOperation.mm  InterfaceBase.cpp  InterfaceBase.h  Item.cpp  Item.h  Libs.cpp  Libs.h  MainScene.cpp  MainScene.h  MapGenerator.cpp  MapGenerator.h  MapInfo.cpp  MapInfo.h  MapNode.cpp  MapNode.h  MapPath.cpp  MapPath.h  Player.cpp  Player.h  TextureGenerator.cpp  TextureGenerator.h  TextureInfo.cpp  TextureInfo.h  (+10 more)
Engine/: Engine.h  Engine.vcxproj  Engine.vcxproj.filters  epc.h
Engine/Debug/: vc120.idb
Engine/Debug/Engine.tlog/: CL.read.1.tlog  CL.write.1.tlog  Engine.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
Engine/Release/Engine.tlog/: Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  cl.read.1.tlog  cl.write.1.tlog  lib.command.1.tlog
Engine/Source/Base/: Action.cpp  Action.h  Constants.h  EngineDirector.cpp  EngineDirector.h  EngineInitialization.cpp  EngineInitialization.h  FileOperation.cpp  FileOperation.h  IncludesEngine.h  ScheduledAction.cpp  ScheduledAction.h  Scheduler.cpp  Scheduler.h
Engine/Source/Graphics/: Camera.cpp  Camera.h  ConstantsTriangleList.h  FramerateCounter.cpp  FramerateCounter.h  InterfaceAnchorPoint.h  InterfaceDrawable.h  InterfaceMovable.h  InterfaceObject2D.cpp  InterfaceObject2D.h  InterfaceRotatable.h  InterfaceScalable.h  InterfaceScene.h  InterfaceZOrderable.h  Layer.cpp  Layer.h  Material.h  Object2D.cpp  Object2D.h  Object3D.cpp  Object3D.h  Sprite.cpp  Sprite.h  Tex2D.cpp  Tex2D.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  TextureData.cpp  TextureData.h  TextureInfo.cpp  TextureInfo.h  TexturePartInfo.cpp  (+1 more)
EngineClasses/: AdditionGLM.h  AdditionGLMrect.h  Camera.cpp  Camera.h  Constants.h  ConstantsNumbers.h  ConstantsTriangleList.h  Director.cpp  Director.h  EngineDirector.cpp  EngineDirector.h  EngineInitialization.cpp  EngineInitialization.h  FileOperation.cpp  IncludesEngine.h  InterfaceAnchorPoint.h  InterfaceDrawable.h  InterfaceMovable.h  InterfaceObject2D.cpp  InterfaceObject2D.h  InterfaceRotatable.h  InterfaceScalable.h  InterfaceScene.h  Layer.cpp  Layer.h  Object2D.cpp  Object2D.h  Object3D.cpp  Object3D.h  PerlinNoise.h  Sprite.cpp  Sprite.h  Tex2D.cpp  Tex2D.h  TextureAtlas.cpp  TextureAtlas.h  TextureData.cpp  TextureData.h  TextureInfo.cpp  TextureInfo.h  (+5 more)
GameDefault/: GameDefault.vcxproj  Main.cpp  Thumbs.db
GameDefault/Debug/: vc120.idb
GameDefault/Release/: GameDefault.vcxprojResolveAssemblyReference.cache
Glowy2D/: CMakeLists.txt
Glowy2D/dep/glfw/lib/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
Glowy2D/dep/glfw/lib/docs/: Doxyfile
Glowy2D/dep/glfw/lib/examples/: Makefile  cmake_install.cmake
Glowy2D/dep/glfw/lib/src/: Makefile  cmake_install.cmake
Glowy2D/dep/glfw/lib/tests/: Makefile  cmake_install.cmake
Glowy2D/dep/lpng/: libpng16.lib
Glowy2D/dep/zlib/: zlib.lib
Glowy2D/inc/: epc.cpp  epc.h  g2dMath.h
Glowy2D/inc/Base/: Action.h  Config.h  Scheduler.h  System.h
Glowy2D/inc/Graphics/: FramerateCounter.h  LineLayer.h  Sprite.h  TextureAtlas.h  TextureInfo.h  TexturePartInfo.h
Glowy2D/lib/: CMakeCache.txt  Makefile  cmake_install.cmake
Glowy2D/src/Base/: Action.cpp  Scheduler.cpp
Glowy2D/src/Graphics/: Camera.cpp  FramerateCounter.cpp  TextureAtlas.cpp
Glowy2D/src/Math/: vertex.cpp
SourceSamplePlatformer/: Background.cpp  Background.h  Body.cpp  Body.h  Character.cpp  Character.h  Circle.cpp  Circle.h  CollisionData.cpp  CollisionData.h  Finish.cpp  Finish.h  GlobalData.cpp  GlobalData.h  Main.cpp  MapInfo.cpp  MapInfo.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  RigidLine.cpp  RigidLine.h  World.cpp  World.h
SourceSamplePlatformer/Tiles/: Tile.cpp  Tile.h  TileAmmo.cpp  TileDirt.cpp  TileEmpty.cpp  TileEmpty.h  TileFinish.cpp  TileFinish.h  TileGrass.cpp  TileStart.cpp  TileStone.h
VC/: Engine.sln
VC/Engine/: Engine.vcxproj  Engine.vcxproj.filters  Thumbs.db
VC/Release/: Thumbs.db
include/: Engine.h  g2dMath.h
include/Base/: ConfigReader.h  ScheduledAction.h  Thumbs.db
include/Graphics/: Camera.h  Layer.h  Material.h  Texture.h  TextureData.h
include/Math/: AdditionGLM.h  quad.h  rect.h  vertex.h
include/base/: Action.h  Config.h  ConfigReader.h  ScheduledAction.h  Scheduler.h  System.h
include/graphics/: Camera.h  FramerateCounter.h  Layer.h  LineLayer.h  Material.h  Sprite.h  Texture.h  TextureAtlas.h  TextureData.h  TextureInfo.h  TexturePartInfo.h
include/math/: AdditionGLM.h  quad.h  rect.h  vertex.h
res/shaders/: PixelDefault.hlsl  Texture.fsh  Texture.vsh  VertexDefault.hlsl  shader.fsh
src/: Engine.cpp
src/base/: Action.cpp  Config.cpp  ConfigReader.cpp  ScheduledAction.cpp  Scheduler.cpp  System.cpp
src/graphics/: Camera.cpp  FramerateCounter.cpp  Layer.cpp  LineLayer.cpp  Sprite.cpp  Texture.cpp  TextureAtlas.cpp  TextureData.cpp  TextureInfo.cpp  TexturePartInfo.cpp
src/math/: quad.cpp  vertex.cpp
src/system/: Action.cpp  Config.cpp  ConfigReader.cpp  ScheduledAction.cpp  System.cpp
test/: CMakeLists.txt
test/Cube/: CMakeLists.txt  main.cpp
test/MaterialsAndLighting/: CMakeLists.txt  main.cpp
test/SamplePlatformer/: Actor.h  Background.cpp  Background.h  Body.cpp  Body.h  CMakeLists.txt  Character.h  Circle.h  CollisionData.cpp  CollisionData.h  Finish.h  GlobalData.cpp  GlobalData.h  Main.cpp  MapInfo.cpp  MapInfo.h  Player.cpp  Player.h  Projectile.h  RigidLine.h  Rocket.cpp  Rocket.h  Walker.cpp  Walker.h  World.cpp  World.h
test/SamplePlatformer/Tiles/: Tile.h  TileAmmo.h  TileDirt.h  TileEnemy.h  TileFinish.cpp  TileGrass.h  TileStart.cpp  TileStart.h  TileStone.cpp
test/Triangle/: CMakeLists.txt  triangle.cpp
(+129 files in other folders)
